--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,3 +9,81 @@
 	justify-content: center;
 	align-items: center;
 }
+
+.testimonials-slider {
+    position: relative;
+}
+
+input[name="carousel"] {
+    display: none;
+}
+
+.carousel-slides {
+    width: 100%;
+    overflow: hidden;
+}
+
+#carousel-1:checked ~ .carousel-slides .carousel-inner {
+    margin-left: 0%;
+}
+
+.carousel-slides .carousel-inner {
+    width: 500%;
+    transition: margin 0.5s;
+}
+
+.carousel-slides .carousel-item {
+    float: left;
+    width: 20%;
+}
+
+.testimonial-block {
+    margin-bottom: 2rem;
+}
+
+.carousel-nav {
+    margin: 0.25rem 0 3rem;
+    text-align: center;
+    z-index: 1;
+}
+
+.carousel-nav label {
+    display: inline-block;
+    margin: 0 6px;
+    width: 15px;
+    height: 15px;
+    border: 2px solid #E6ECF8;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: background-color 0.25s;
+}
+
+#carousel-1:checked ~ .carousel-nav label[for="carousel-1"] {
+    background-color: $primary;
+    border: 2px solid $primary;
+}
+
+.testimonial-block .quote {
+    margin: 0 auto 2.5rem;
+}
+
+.testimonial-block img.avatar {
+    margin: 2.5rem auto 2rem;
+    height: auto;
+    border-radius: 100px;
+}
+
+
+.box .content figure.image img.is-issue-icon {
+    height: 64px;
+    width: auto;
+}
+
+.issue-feed {
+    padding-bottom: 9rem;
+    margin-top: -14rem;
+}
+
+.is-long-ish {
+    padding-bottom: 9rem;
+}
