--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -135,7 +135,7 @@ input[name="carousel"] {
 }
 
 .is-form-page .container form input.is-large, .is-form-page .container form textarea.is-large, .is-form-page .container form select.is-large {
-    font-size: 1.4rem;
+    // font-size: 1.4rem;
 }
 
 .is-form-page .container form input, .is-form-page .container form textarea, .is-form-page .container form select {
