add social login

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -112,45 +112,39 @@ input[name="carousel"] {
     font-weight: 400;
 }
 
-.is-form-page .container .avatar {
-    width: 84px;
-    margin: 2rem 0;
-    z-index: 10;
-}
-
-.is-form-page .container form {
-    max-width: 640px;
-    margin: 32px auto 0;
-}
-
 .is-form-page .container {
+    .avatar {
+      width: 84px;
+      margin: 2rem 0;
+      z-index: 10;
+    }
+    .form-page {
+      max-width: 640px;
+      margin: 32px auto 0;
+      label.label {
+        font-weight: 400;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 1.2rem;
+        color: rgba(41, 51, 71, 0.65);
+      }
+      input.is-large, textarea.is-large, select.is-large {
+        font-size: 1.4rem;
+      }
+      input, textarea, select {
+        border-color: #E6ECF8;
+        color: #293347;
+        box-shadow: none;
+        font-weight: 300;
+      }
+      button {
+        margin: 20px 0 0;
+        border-width: 2px;
+        font-weight: 400;
+        height: auto;
+      }
+    }
     padding: 0 20px;
-}
-
-.is-form-page .container form label.label {
-    font-weight: 400;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 1.2rem;
-    color: rgba(41,51,71,0.65);
-}
-
-.is-form-page .container form input.is-large, .is-form-page .container form textarea.is-large, .is-form-page .container form select.is-large {
-    // font-size: 1.4rem;
-}
-
-.is-form-page .container form input, .is-form-page .container form textarea, .is-form-page .container form select {
-    border-color: #E6ECF8;
-    color: #293347;
-    box-shadow: none;
-    font-weight: 300;
-}
-
-.is-form-page .container form button {
-    margin: 20px 0 80px;
-    border-width: 2px;
-    font-weight: 400;
-    height: auto;
-}
+  }
 
 .select:not(.is-multiple):not(.is-loading)::after {
     top: 50%;
@@ -194,7 +188,7 @@ input[name="carousel"] {
 }
 
 @media screen and (min-width: 769px){
-    .is-form-page .container form {
+    .is-form-page .container .form-page {
         margin: 60px auto 0;
     }
 }
