--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,32 @@
 // VARIABLES
 
-$primary: #CC00FF;
-$secondary: #E47AFF;
+//Theme color variables
+$primary: #039BE5;
+$secondary: #7F00FF;
+$accent: #00D1B2;
+
 $box-link-hover-shadow: 0 2px 3px rgba($primary, 0.1), 0 0 0 1px $primary;
 $pagination-current-background-color: $primary;
 $pagination-current-border-color: $primary;
+$blue-grey:#039BE5;
+$accent:#00D1B2;
+$accent-box-shadow: 0 14px 26px -12px rgba(0,209,178,0.42),0 4px 23px 0px rgba(0,0,0,0.12),0 8px 10px -5px rgba(0,209,178,0.2) !important;
+$green:#00b289;
+$green-box-shadow: 0 14px 26px -12px rgba(0,178,137,0.42),0 4px 23px 0px rgba(0,0,0,0.12),0 8px 10px -5px rgba(0,178,137,0.2) !important;
+$orange:#eda514;
+$orange-box-shadow: 0 14px 26px -12px rgba(237,165,20,0.42),0 4px 23px 0px rgba(0,0,0,0.12),0 8px 10px -5px rgba(237,165,20,0.2) !important;
+$red: #FF7273;
+$red-box-shadow: 0 14px 26px -12px rgba(255,114,115,0.42),0 4px 23px 0px rgba(0,0,0,0.12),0 8px 10px -5px rgba(255,114,115,0.2) !important;
+$blue: #039BE5;
+$blue-box-shadow: 0 14px 26px -12px rgba(3,155,229,0.42),0 4px 23px 0px rgba(0,0,0,0.12),0 8px 10px -5px rgba(3,155,229,0.2) !important;
+
+
+$facebook: #3B5998;
+$twitter: #1dcaff;
+$linkedin: #007bb6;
+$tumblr: #35465c;
+$github: #444;
+$dribbble: #ea4c89;
+$google-plus: #d34836;
+$youtube: #cc181e;
+$reddit: #ff4500;
