--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -20,6 +20,8 @@ $red-box-shadow: 0 14px 26px -12px rgba(255,114,115,0.42),0 4px 23px 0px rgba(0,
 $blue: #039BE5;
 $blue-box-shadow: 0 14px 26px -12px rgba(3,155,229,0.42),0 4px 23px 0px rgba(0,0,0,0.12),0 8px 10px -5px rgba(3,155,229,0.2) !important;
 
+$navbar-item-hover-background-color: transparent;
+$navbar-item-hover-color: $secondary;
 
 $facebook: #3B5998;
 $twitter: #1dcaff;
