--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -22,6 +22,7 @@ $blue-box-shadow: 0 14px 26px -12px rgba(3,155,229,0.42),0 4px 23px 0px rgba(0,0
 
 $navbar-item-hover-background-color: transparent;
 $navbar-item-hover-color: $secondary;
+$navbar-burger-color: $secondary;
 
 $facebook: #3B5998;
 $twitter: #1dcaff;
