--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,8 @@
 // VARIABLES
 
 //Theme color variables
-$primary: #039BE5;
-$secondary: #7F00FF;
+$primary: #7F00FF;
+$secondary: #039BE5;
 $accent: #00D1B2;
 
 $box-link-hover-shadow: 0 2px 3px rgba($primary, 0.1), 0 0 0 1px $primary;
