add image register column

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -19,6 +19,7 @@ $red: #FF7273;
 $red-box-shadow: 0 14px 26px -12px rgba(255,114,115,0.42),0 4px 23px 0px rgba(0,0,0,0.12),0 8px 10px -5px rgba(255,114,115,0.2) !important;
 $blue: #039BE5;
 $blue-box-shadow: 0 14px 26px -12px rgba(3,155,229,0.42),0 4px 23px 0px rgba(0,0,0,0.12),0 8px 10px -5px rgba(3,155,229,0.2) !important;
+$coal: #444444;
 
 $navbar-item-hover-background-color: transparent;
 $navbar-item-hover-color: $secondary;
@@ -34,4 +35,7 @@ $google-plus: #d34836;
 $youtube: #cc181e;
 $reddit: #ff4500;
 
+$light-grey: #EFF4F7;
 $title-grey: #A9ABAC;
+$section-grey: #fbfbfb;
+$section-grey-accent: #efefef;
