--- a/src/styles/layout/hero.scss
+++ b/src/styles/layout/hero.scss
@@ -134,7 +134,7 @@ Hero related styles
             font-size: 3.5rem;
         }
         &.big-title {
-            color: $blue-grey;
+            color: $primary;
             z-index: 999;
             font-size: 4rem;
         }
